[gd_scene load_steps=46 format=3 uid="uid://cc6r30yo8g5sa"]

[ext_resource type="Script" uid="uid://c6o2n6duy6hnn" path="res://Script/character_body_2d.gd" id="1_4sjlk"]
[ext_resource type="Texture2D" uid="uid://ba7egdw8ijvqe" path="res://Artwork/Dacian Warrior Animated Pixel-Art 2D/Dacian Warrior Animated Pixel-Art 2D/Dead/50x50/Dead 1 Sprite Sheet.png" id="1_lhvu3"]
[ext_resource type="Texture2D" uid="uid://dhdf1q62kkjg4" path="res://Artwork/Dacian Warrior Animated Pixel-Art 2D/Dacian Warrior Animated Pixel-Art 2D/Fall/50x50/Fall 1 Sprite Sheet.png" id="2_4sjlk"]
[ext_resource type="Texture2D" uid="uid://38cblrecxd6x" path="res://Artwork/Dacian Warrior Animated Pixel-Art 2D/Dacian Warrior Animated Pixel-Art 2D/Idle/50x50/Idle Sprite 0.png" id="3_qp52p"]
[ext_resource type="Texture2D" uid="uid://n34mgfuaayi2" path="res://Artwork/Dacian Warrior Animated Pixel-Art 2D/Dacian Warrior Animated Pixel-Art 2D/Attack/50x50/Attack 0-1 Sprite Sheet.png" id="5_1kp85"]
[ext_resource type="Texture2D" uid="uid://cik343fsnou2l" path="res://Artwork/Dacian Warrior Animated Pixel-Art 2D/Dacian Warrior Animated Pixel-Art 2D/Run/50x50/Run Sprite 2.png" id="6_qnedo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wyqjk"]
atlas = ExtResource("1_lhvu3")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_k85er"]
atlas = ExtResource("1_lhvu3")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebjds"]
atlas = ExtResource("1_lhvu3")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1dt5"]
atlas = ExtResource("1_lhvu3")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_au0nh"]
atlas = ExtResource("1_lhvu3")
region = Rect2(200, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_76bt2"]
atlas = ExtResource("1_lhvu3")
region = Rect2(250, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxias"]
atlas = ExtResource("1_lhvu3")
region = Rect2(300, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucfvk"]
atlas = ExtResource("1_lhvu3")
region = Rect2(350, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dyae"]
atlas = ExtResource("2_4sjlk")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u5n8"]
atlas = ExtResource("2_4sjlk")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_73nau"]
atlas = ExtResource("3_qp52p")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_skrk8"]
atlas = ExtResource("3_qp52p")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye16i"]
atlas = ExtResource("3_qp52p")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhvu3"]
atlas = ExtResource("5_1kp85")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sjlk"]
atlas = ExtResource("5_1kp85")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp52p"]
atlas = ExtResource("5_1kp85")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ct3r"]
atlas = ExtResource("5_1kp85")
region = Rect2(200, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kp85"]
atlas = ExtResource("5_1kp85")
region = Rect2(250, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnedo"]
atlas = ExtResource("5_1kp85")
region = Rect2(300, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_75u2t"]
atlas = ExtResource("5_1kp85")
region = Rect2(350, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qa1u"]
atlas = ExtResource("5_1kp85")
region = Rect2(400, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltww1"]
atlas = ExtResource("5_1kp85")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7mna"]
atlas = ExtResource("5_1kp85")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmwkj"]
atlas = ExtResource("5_1kp85")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3r5w"]
atlas = ExtResource("5_1kp85")
region = Rect2(200, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rslu"]
atlas = ExtResource("5_1kp85")
region = Rect2(250, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uyxa"]
atlas = ExtResource("5_1kp85")
region = Rect2(300, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_61y8d"]
atlas = ExtResource("5_1kp85")
region = Rect2(350, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8icv6"]
atlas = ExtResource("5_1kp85")
region = Rect2(400, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwn6v"]
atlas = ExtResource("5_1kp85")
region = Rect2(450, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms8fj"]
atlas = ExtResource("6_qnedo")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_unmcv"]
atlas = ExtResource("6_qnedo")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh552"]
atlas = ExtResource("6_qnedo")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbxdm"]
atlas = ExtResource("6_qnedo")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk7dk"]
atlas = ExtResource("6_qnedo")
region = Rect2(200, 0, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_uafw2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyqjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k85er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebjds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1dt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au0nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76bt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxias")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucfvk")
}],
"loop": false,
"name": &"Death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dyae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u5n8")
}],
"loop": true,
"name": &"Fall",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_73nau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skrk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye16i")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhvu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sjlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp52p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ct3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kp85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnedo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75u2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qa1u")
}],
"loop": false,
"name": &"Single Attack",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltww1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7mna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmwkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3r5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rslu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uyxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61y8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8icv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwn6v")
}],
"loop": true,
"name": &"Weapon",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms8fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unmcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh552")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbxdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk7dk")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qp52p"]
radius = 5.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhvu3"]
size = Vector2(18, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4sjlk"]
size = Vector2(18, 24)

[node name="Player" type="CharacterBody2D"]
position = Vector2(-1, 0)
script = ExtResource("1_4sjlk")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_uafw2")
animation = &"Single Attack"
frame = 7
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 6)
shape = SubResource("CapsuleShape2D_qp52p")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(-1, -1)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(16, 7)
shape = SubResource("RectangleShape2D_lhvu3")

[node name="Direction" type="Marker2D" parent="."]

[node name="ActionableFinder" type="Area2D" parent="Direction"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/ActionableFinder"]
position = Vector2(15, 6)
shape = SubResource("RectangleShape2D_4sjlk")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
